--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,9 @@
   "background": {
     "service_worker": "background.js"
   },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
